k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mkdocs-demo
  name: mkdocs-demo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: mkdocs-demo
